<?xml version="1.0" encoding="utf-8"?>
<resources>
    <!--  About -->
    <string name="about_app">Created by Phil Wagner of the education blog BrokenAirplane</string>
    <string name="app_name">Physics Gizmo</string>
    <string name="blog_url">http://www.brokenairplane.com/2011/10/android-education-science-physicsgizmo.html</string>
    <string name="brokenAirplane_link">www.brokenairplane.com</string>
    <string name="how_to_use">How to use</string>
    
    <!--  How to use -->
    <string name="instructions_accel">Accelerometer:\n\nData is collected every 100 ms\n\nX - rotating left to right (roll)\nY - rotating top to bottom (pitch)\nZ - moving up or down relative to the Earth (azimuth)\n\nUse it on a rollercoaster or to measure forces and acceleration.\n\nPhysicsGizmo Instructions:\n1. Select your sensor\n2. Give your data a name or leave it with the time and date.\n3. Set the timer.\n4. Click start to collect data.\n5. Upload your data to analyze later (saved in the ScienceData folder on the SD card).</string>
    <string name="instructions_photo1">Pulse photogate:\n\nAn event is triggered each time the proximity sensor (usually in the upper left of the phone) is covered.\n\nUse it to count events.\n\nPhysicsGizmo Instructions:\n1. Select your sensor\n2. Give your data a name or leave it with the time and date.\n3. Set the timer.\n4. Click start to collect data.\n5. Upload your data to analyze later (saved in the ScienceData folder on the SD card).</string>
    <string name="instructions_photo2">Pulse photogate with 2 phones:\n\n1. Click yes to turn on Bluetooth Discovery mode.\n2. Select another phone running Physics Gizmo from the list.\n3. The timer starts when the first phone\'s proximity sensor (usually in the upper left of the phone) is triggered.\n4.The timer stops when the second phone\'s proximity sensor is triggered.\n\nUse it to see how long it takes for an object to fall or roll down a ramp like Galileo\'s experiment.\n\nBluetooth range ~30 ft/10 m\n\nPhysicsGizmo Instructions:\n1. Select your sensor\n2. Give your data a name or leave it with the time and date.\n3. Set the timer.\n4. Click start to collect data.\n5. Upload your data to analyze later (saved in the ScienceData folder on the SD card).</string>
    <string name="instructions_pendulum">Pendulum photogate:\n\nAn event is triggered for each completed full swing/period of a pendulum passing by the proximity sensor (usually in the upper left of the phone).\n\nPhysicsGizmo Instructions:\n1. Select your sensor\n2. Give your data a name or leave it with the time and date.\n3. Set the timer.\n4. Click start to collect data.\n5. Upload your data to analyze later (saved in the ScienceData folder on the SD card).</string>
    <string name="accel_help">Measures the force on X,Y,Z axis of phone.</string>
    <string name="gate1_help">Triggers each time sensor is blocked</string>
    <string name="gate2_start_help">If Bluetooth is on, starts timer</string>
    <string name="gate2_stop_help">If Bluetooth is on, stops timer</string>
    <string name="gate2_not_connected_help">Restart app to turn on Bluetooth/Discovery</string>
    <string name="pendulum_help">Time of a half period swing (2 triggers)</string>
    <string name="stopped_help">Add more time to sense again</string>
    
    <!-- Email/save data -->
    <string name="email_upload">Email / Upload</string>
    <string name="email_subject">Science Data</string>
    <string name="email_body1">Attached is the&#160;</string>
    <string name="email_body2">&#160;data.</string>
    <string name="send_email">Send email</string>
    <string name="filetype_csv">csv</string>
    
    <!-- Label and button text -->
    <string name="add_time">Add time</string>
    <string name="cancel">Cancel</string>
    <string name="data_label">Data:&#160;</string>
    <string name="go_to_blog">Learn more</string>
    <string name="ok">OK</string>
    <string name="quit">Are you sure you want to leave?</string>
    <string name="subtract_time">Subtract time</string>
    <string name="sensors_prompt">Choose a type of sensor</string>
    <string name="start_sensing">Start Sensing</string>
    <string name="stop_sensing">Stop Sensing</string>
    <string name="timer_finished">Done</string>
    <string name="initial_time">10 sec</string>
    <string name="empty_unit_text">           </string>
    <string name="empty_value_text">        </string>
    <string name="empty_occurance">   </string>
    <string name="empty_prox_time">     </string>
    
    <!--  Sensor display -->
    <string name="event_label">Event:</string>
    <string name="event_units">ms</string>
    <string name="timer_units">&#160;sec</string>
    <string name="x_label">X:</string>
    <string name="y_label">Y:</string>
    <string name="z_label">Z:</string>
    <string-array name="sensors_array">
        <item>Accelerometer</item>
        <item>Photogate</item> </string-array>
    <string name="sensor_mode_name_accel">Accelerometer</string>
    <string name="sensor_mode_name_photo_pendulum">Photogate Pendulum</string>
    <string name="sensor_mode_name_photo_one_phone">Photogate Pulse with 1 Phone</string>
    <string name="sensor_mode_name_photo_two_phones">Photogate Pulse with 2 Phones</string>
        
    <!--  Bluetooth -->
    <string name="bt_label">Time:</string>
    <string name="bt_not_enabled_leaving">Bluetooth was not enabled.</string>
    <string name="bt_not_enabled_button_msg">Try Bluetooth Again</string>
    <string name="bt_sensing_interrupt">If you stop now, you will lose your Bluetooth connection and need to restart PhysicsGizmo on phones to reestablish a link.</string>
    <string name="bt_state_connected">CONNECTED</string>
    <string name="bt_state_off">OFF</string>
    <string name="bt_state_on">ON</string>
    <string name="not_connected">Not Connected</string>
    <string name="not_connected_verbose">You are not connected to a device</string>
    <string name="send">Send</string>
    <string name="title_connecting">Connecting</string>
    <string name="title_connected_to_label">Connected: </string>
    <string name="title_not_paired">Not Paired</string>
    <string name="bt_pair_or_switch">Connect to another phone or switch sensors.</string>
    <string name="bt_connect_or_switch">Connect Bluetooth or switch sensors.</string>
    <string name="button_disabled_message">Check other phone</string>

    <!--  DeviceListActivity -->
    <string name="button_scan">Scan for devices</string>
    <string name="none_paired">No devices have been paired</string>
    <string name="none_found">No devices found</string>
    <string name="scanning">Scanning for devices#8230;</string>
    <string name="select_device">Select a device to connect</string>
    <string name="title_paired_devices">Paired Devices</string>
    <string name="title_other_devices">Other Available Devices</string>

    <!-- Options Menu -->
    <string name="connect">Connect a device</string>
    <string name="discoverable">Make discoverable</string>
    
    <!-- Message Types -->
    <string name="add_timer_msg">addTimer</string>
    <string name="received_time_msg">receivedTime</string>
    <string name="start_timer_msg">startTimer</string>
    <string name="stop_timer_msg">stopTimer</string>
    <string name="subtract_timer_msg">subtractTimer</string>
    <string name="pulse_msg">pulse</string>
    
</resources>
