<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical" >

    <TextView
        android:id="@+id/mytitle"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text=" "
        style="?android:attr/windowTitleStyle"/>
    
    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:paddingBottom="5dp" >

        <Spinner
            android:id="@+id/sensor_spinner"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_centerVertical="true"
            android:entries="@array/sensors_array"
            android:prompt="@string/sensors_prompt"/>

        <ImageButton
            android:id="@+id/how_to_use"
            android:layout_width="47dp"
            android:layout_height="47dp"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:layout_marginRight="16dp"
            android:adjustViewBounds="true"
            android:contentDescription="@string/how_to_use"
            android:scaleType="centerInside"
            android:src="@drawable/question" />

    </RelativeLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/data_label"
            android:textSize="18dp"
            android:paddingRight="20dp" />

        <EditText
            android:id="@+id/data_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="18dp" >
        </EditText>
    </LinearLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="right"
        android:paddingBottom="15dp"
        android:text="@string/data_warning"
        android:textSize="15sp" />

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="52dp"
        android:gravity="center"
        android:orientation="horizontal"
        android:paddingBottom="10dp">
        <ImageButton
            android:id="@+id/add_time"
            android:layout_width="47dp"
            android:layout_height="47dp"
            android:adjustViewBounds="true"
            android:scaleType="centerInside"
            android:src="@drawable/plus" 
            android:contentDescription="@string/add_time"/>
        <TextView
            android:id="@+id/sensing_time"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:paddingLeft="20dp"
            android:paddingRight="20dp"
            android:text="10 sec"
            android:textSize="30sp" >
        </TextView>

        <ImageButton
            android:id="@+id/subtract_time"
            android:layout_width="47dp"
            android:layout_height="47dp"
            android:adjustViewBounds="true"
            android:scaleType="centerInside"
            android:src="@drawable/minus" 
            android:contentDescription="@string/subtract_time"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/contextual_help"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:textSize="18sp"/>
    </LinearLayout>

    <ViewFlipper
        android:id="@+id/viewflipper"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content" >
        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:orientation="vertical" >
            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:paddingTop="5dp" >
                <TextView
                    android:layout_width="30dp"
                    android:layout_height="wrap_content"
                    android:text="@string/x_label"
                    android:textSize="25sp" />
                <TextView
                    android:id="@+id/x_value"
                    android:layout_width="80dp"
                    android:layout_height="wrap_content"
                    android:gravity="right"
                    android:paddingLeft="10dp"
                    android:paddingRight="10dp"
                    android:text="        "
                    android:textSize="25sp" />

                <TextView
                    android:id="@+id/xAccelUnits"
                    android:layout_width="200dp"
                    android:layout_height="wrap_content"
                    android:text="           "
                    android:textSize="25sp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:paddingTop="20dp" >

                <TextView
                    android:layout_width="30dp"
                    android:layout_height="wrap_content"
                    android:text="@string/y_label"
                    android:textSize="25sp" />

                <TextView
                    android:id="@+id/y_value"
                    android:layout_width="80dp"
                    android:layout_height="wrap_content"
                    android:gravity="right"
                    android:paddingLeft="10dp"
                    android:paddingRight="10dp"
                    android:text="        "
                    android:textSize="25sp" />

                <TextView
                    android:id="@+id/yAccelUnits"
                    android:layout_width="200dp"
                    android:layout_height="wrap_content"
                    android:text="           "
                    android:textSize="25sp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:paddingTop="20dp" >

                <TextView
                    android:layout_width="30dp"
                    android:layout_height="wrap_content"
                    android:text="@string/z_label"
                    android:textSize="25sp" />

                <TextView
                    android:id="@+id/z_value"
                    android:layout_width="80dp"
                    android:layout_height="wrap_content"
                    android:gravity="right"
                    android:paddingLeft="10dp"
                    android:paddingRight="10dp"
                    android:text="        "
                    android:textSize="25sp" />

                <TextView
                    android:id="@+id/zAccelUnits"
                    android:layout_width="200dp"
                    android:layout_height="wrap_content"
                    android:text="           "
                    android:textSize="25sp" />
            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:paddingTop="15dp" >

                <TextView
                    android:layout_width="70dp"
                    android:layout_height="wrap_content"
                    android:text="@string/event_label"
                    android:textSize="25sp" />

                <TextView
                    android:id="@+id/proximity_occurance1"
                    android:layout_width="40dp"
                    android:layout_height="wrap_content"
                    android:paddingLeft="10dp"
                    android:text="   "
                    android:textSize="25sp" />

                <TextView
                    android:id="@+id/proximity_time1"
                    android:layout_width="100dp"
                    android:layout_height="wrap_content"
                    android:gravity="right"
                    android:paddingLeft="7dp"
                    android:paddingRight="10dp"
                    android:text="     "
                    android:textSize="25sp" />

                <TextView
                    android:layout_width="40dp"
                    android:layout_height="wrap_content"
                    android:text="@string/event_units"
                    android:textSize="25sp" />
            </LinearLayout>
            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:paddingTop="15dp" >

                <TextView
                    android:layout_width="70dp"
                    android:layout_height="wrap_content"
                    android:text="@string/event_label"
                    android:textSize="25sp" />

                <TextView
                    android:id="@+id/proximity_occurance2"
                    android:layout_width="40dp"
                    android:layout_height="wrap_content"
                    android:paddingLeft="10dp"
                    android:text="   "
                    android:textSize="25sp" />

                <TextView
                    android:id="@+id/proximity_time2"
                    android:layout_width="100dp"
                    android:layout_height="wrap_content"
                    android:gravity="right"
                    android:paddingLeft="7dp"
                    android:paddingRight="10dp"
                    android:text="     "
                    android:textSize="25sp" />

                <TextView
                    android:layout_width="40dp"
                    android:layout_height="wrap_content"
                    android:text="@string/event_units"
                    android:textSize="25sp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:paddingTop="15dp" >

                <TextView
                    android:layout_width="70dp"
                    android:layout_height="wrap_content"
                    android:text="@string/event_label"
                    android:textSize="25sp" />

                <TextView
                    android:id="@+id/proximity_occurance3"
                    android:layout_width="40dp"
                    android:layout_height="wrap_content"
                    android:paddingLeft="10dp"
                    android:text="   "
                    android:textSize="25sp" />

                <TextView
                    android:id="@+id/proximity_time3"
                    android:layout_width="100dp"
                    android:layout_height="wrap_content"
                    android:gravity="right"
                    android:paddingLeft="7dp"
                    android:paddingRight="10dp"
                    android:text="     "
                    android:textSize="25sp" />

                <TextView
                    android:layout_width="40dp"
                    android:layout_height="wrap_content"
                    android:text="@string/event_units"
                    android:textSize="25sp" />
            </LinearLayout>
        </LinearLayout>
         <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:orientation="vertical"
            android:padding="5dp" >
            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:paddingTop="30dp" >
                <TextView
                    android:id="@+id/bt_label"
                    android:layout_width="170dp"
                    android:layout_height="wrap_content"
                    android:text="@string/bt_label"
                    android:textSize="25sp" />
                <TextView
                    android:id="@+id/proximity_time_only"
                    android:layout_width="70dp"
                    android:layout_height="wrap_content"
                    android:gravity="right"
                    android:text="     "
                    android:textSize="25sp" />

                <TextView
                    android:id="@+id/bt_units"
                    android:layout_width="40dp"
                    android:layout_height="wrap_content"
                    android:paddingLeft="3dp"
                    android:text="@string/event_units"
                    android:textSize="25sp" />
            </LinearLayout>
            </LinearLayout>
    </ViewFlipper>

    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content">

        <Button
            android:id="@+id/start_stop"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:text="@string/start_sensing"
            android:textSize="22sp" />
    </RelativeLayout>

</LinearLayout>